--- a/src/App.css
+++ b/src/App.css
@@ -5,12 +5,12 @@ body, html, #root {
   width: 100%;
   height: 100%;
   min-height: 80vh;
-  overflow: auto; /* Allow scrolling */
+  overflow: auto;
   scroll-behavior: smooth;
 }
 
 h1 {
   font-size: 3.2em;
   line-height: 1.1;
-  margin: 0; /* Remove default margin */
+  margin: 0; 
 }
